# PL-timeTabler

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  DESIGN.md  README.md  SECURITY.md  alembic.ini  compose.dev.yaml  compose.yaml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/timetabler/: __init__.py  config.py  types.py
apps/backend/src/timetabler/api/: __init__.py  app.py  dependencies.py  main.py  openapi.py  rate_limit.py  resource_schemas.py  schemas.py
apps/backend/src/timetabler/api/routes/: auth.py  catalog.py  completed_courses.py  courses.py  health.py  history.py  optimizations.py  requirements.py  reviews.py  timetables.py  users.py
apps/backend/src/timetabler/auth/: __init__.py  mailer.py  service.py
apps/backend/src/timetabler/catalog/: __init__.py  models.py  parser.py  repository.py  static_export.py  validate.py
apps/backend/src/timetabler/db/: __init__.py  models.py  session.py
apps/backend/src/timetabler/history/: __init__.py  importer.py
apps/backend/src/timetabler/jobs/: __init__.py  store.py
apps/backend/src/timetabler/optimizer/: __init__.py  constraints.py  cp_sat.py  models.py  reference.py  scoring.py  worker.py
apps/backend/src/timetabler/requirements/: __init__.py  graduation_normalizer.py  graduation_repository.py  importer.py  normalizer.py
apps/backend/tests/: conftest.py  test_api.py  test_auth.py  test_catalog.py  test_curriculum_requirements_data.py  test_graduation_requirements_data.py  test_history.py  test_jobs.py  test_major_required_data.py  test_openapi.py  test_parser.py  test_rate_limit.py  test_requirements_importer.py  test_team_features.py
apps/backend/tests/optimizer/: __init__.py  test_optimizer.py  test_worker.py
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
contracts/: openapi.json
data/: README.md  manifest.json
data/classrooms/: classroom-sessions-2026-1.json
data/courses/: courses-2026-1.csv  courses-2026-1.json  courses-lookup-2026-1.json
data/dreams/: README.md  manifest.json
data/requirements/: README.md
docs/: API_SPEC.md  ARCHITECTURE.md  ERD.html  ERD.md  IMPLEMENTATION_READINESS.md  MVP_PLAN.md  ONBOARDING_INFORMATION_ARCHITECTURE.md  PRODUCT_PLAN.md  TEAM_PROJECT_API_SPEC.csv  TEAM_PROJECT_API_SPEC.md  TEAM_PROJECT_API_SPEC_all.csv  TEAM_PROJECT_DTO_SPEC.csv  TEAM_PROJECT_DTO_SPEC.md  TEAM_PROJECT_FEATURES.md  TEAM_PROJECT_NOTION_EXPORT.md  UX_ITERATION_1.md  UX_ITERATION_2.md  UX_ITERATION_3.md  UX_ITERATION_4.md  UX_ITERATION_5.md  UX_ITERATION_6.md  팀프로젝트_API_명세서.md
docs/erdcloud/: timetabler-erdcloud-import.sql  timetabler-production-snapshot.json
docs/research/: DAEJIN_ACADEMIC_REQUIREMENTS_SOURCE_AUDIT.md  DAEJIN_GRADUATION_RULES.md  DAEJIN_REQUIREMENTS_DATA_GAP_AUDIT_2026-07-11.md
e2e/: package-lock.json  package.json  playwright.config.ts  timetable.spec.ts
migrations/: README.md  env.py
migrations/versions/: 20260710_0001_initial_backend.py  20260710_0002_optional_email_auth.py  20260714_0004_team_features.py  (+4 more)
scripts/: backup-db.sh  collect-dreams-history.cjs  deploy-tunnel.sh  extract-major-required.py  provision-db-viewer.sh  restore-db.sh  validate-dreams-archive.cjs
(+94 files in other folders)
