[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pl-timetabler-backend"
version = "0.1.0"
description = "Production backend, data pipeline, and optimization worker for PL-timeTabler"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16",
  "asyncpg>=0.30",
  "fastapi>=0.116",
  "orjson>=3.10",
  "ortools>=9.12,<10",
  "pydantic-settings>=2.10",
  "sqlalchemy[asyncio]>=2.0.41",
  "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21",
  "httpx>=0.28",
  "mypy>=1.16",
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
  "ruff>=0.12",
]

[project.scripts]
timetabler-api = "timetabler.api.main:run"
timetabler-validate-data = "timetabler.catalog.validate:run"
timetabler-openapi = "timetabler.api.openapi:run"

[tool.hatch.build.targets.wheel]
packages = ["src/timetabler"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["timetabler"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
